# ai-research-agent

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt
scripts/: test_llm.py  test_search.py  test_web_reader.py  test_workflow.py
src/research_agent/: __init__.py  __main__.py  config.py
src/research_agent/graph/: __init__.py
src/research_agent/llm/: __init__.py  _openai.py  base.py  errors.py  factory.py
src/research_agent/nodes/: __init__.py  planner.py  reader.py  search_node.py  summarizer.py  writer.py
src/research_agent/prompts/: __init__.py  planner.txt  report_writer.txt  summarizer.txt
src/research_agent/state/: __init__.py
src/research_agent/tools/: __init__.py  models.py  search.py  web_reader.py
tests/: test_config.py  test_llm.py  test_prompts.py  test_tools.py  test_workflow.py
